--- a/package.json
+++ b/package.json
@@ -9,14 +9,12 @@
     "i18next": "21.8.10",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-react-postprocessor": "3.1.0",
-    "intersection-observer": "0.12.2",
     "jest-environment-jsdom": "29.7.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "11.18.6",
     "react-router": "6.23.1",
-    "react-router-dom": "6.23.1",
-    "url-search-params-polyfill": "8.2.3"
+    "react-router-dom": "6.23.1"
   },
   "devDependencies": {
     "@babel/core": "7.24.6",
@@ -26,8 +24,6 @@
     "@babel/preset-react": "7.24.7",
     "@babel/preset-typescript": "7.24.7",
     "@testing-library/react": "12.1.4",
-    "@types/cheerio": "0.22.35",
-    "@types/color": "3.0.6",
     "@types/jest": "27.5.0",
     "@types/node": "20.14.2",
     "@types/platform": "1.3.6",
