--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "i18next": "21.8.10",
     "i18next-browser-languagedetector": "8.0.0",
     "i18next-react-postprocessor": "3.1.0",
-    "intersection-observer": "0.12.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "jest-environment-jsdom": "29.7.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-i18next": "11.18.6",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0",
-    "url-search-params-polyfill": "8.2.3"
+    "react-router": "6.23.1",
+    "react-router-dom": "6.23.1"
   },
   "devDependencies": {
     "@babel/core": "7.24.6",
@@ -24,21 +23,16 @@
     "@babel/preset-env": "7.24.7",
     "@babel/preset-react": "7.24.7",
     "@babel/preset-typescript": "7.24.7",
-    "@emotion/babel-preset-css-prop": "11.11.0",
-    "@hot-loader/react-dom": "17.0.2",
     "@testing-library/react": "12.1.4",
-    "@types/cheerio": "0.22.35",
-    "@types/color": "3.0.6",
-    "@types/enzyme": "3.10.12",
     "@types/jest": "27.5.0",
     "@types/node": "20.14.2",
-    "@types/platform": "^1.3.6",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
+    "@types/platform": "1.3.6",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
     "@types/react-router-dom": "5.3.3",
     "@types/webpack-env": "1.18.5",
     "@typescript-eslint/eslint-plugin": "7.12.0",
-    "@typescript-eslint/parser": "^7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
     "@wireapp/copy-config": "2.2.2",
     "@wireapp/eslint-config": "1.4.0",
     "adm-zip": "0.5.14",
@@ -46,8 +40,6 @@
     "babel-loader": "8.2.5",
     "babel-plugin-remove-jsx-attributes": "0.0.2",
     "cross-env": "7.0.3",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.8",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-babel": "5.3.1",
@@ -64,17 +56,16 @@
     "generate-changelog": "1.8.0",
     "husky": "4.3.8",
     "i18next-scanner": "4.2.0",
-    "jest": "26.6.3",
+    "jest": "29.7.0",
     "lint-staged": "15.2.5",
     "os-browserify": "0.3.0",
     "path-browserify": "1.0.1",
     "prettier": "3.2.4",
-    "react-hot-loader": "4.13.1",
     "simple-git": "3.24.0",
     "sort-json": "2.0.1",
     "svg-inline-loader": "0.8.2",
     "terser-webpack-plugin": "5.3.10",
-    "ts-jest": "26.5.6",
+    "ts-jest": "29.1.5",
     "typescript": "4.9.5",
     "webpack": "5.91.0",
     "webpack-bundle-analyzer": "4.10.2",
