chore: map account main branch to wire-build main branch

--- a/.github/workflows/test_build_deploy.yml
+++ b/.github/workflows/test_build_deploy.yml
@@ -75,7 +75,7 @@ jobs:
           # },
           map: |
             {
-              "release*": {
+              "main": {
                "targets": "[\"main\"]"
               },
               "staging": {
