--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@wireapp/api-client": "27.10.1",
     "@wireapp/commons": "5.3.0",
     "@wireapp/react-ui-kit": "9.26.3",
+    "@wireapp/telemetry": "0.1.2",
     "core-js": "3.39.0",
     "dotenv": "16.4.5",
     "dotenv-extended": "2.9.0",
@@ -14,7 +15,8 @@
     "react-dom": "18.3.1",
     "react-i18next": "11.18.6",
     "react-router": "7.0.1",
-    "react-router-dom": "6.28.0"
+    "react-router-dom": "6.28.0",
+    "uuid": "11.0.3"
   },
   "devDependencies": {
     "@babel/core": "7.26.0",
@@ -31,6 +33,7 @@
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "@types/react-router-dom": "5.3.3",
+    "@types/uuid": "10.0.0",
     "@types/webpack-env": "1.18.5",
     "@typescript-eslint/eslint-plugin": "8.15.0",
     "@typescript-eslint/parser": "7.17.0",
